--- a/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/layouts/partials/widgets/about.html
+++ b/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/layouts/partials/widgets/about.html
@@ -89,7 +89,7 @@
       </div>
       {{ end }}
 
-      {{ with $person.education }}
+<!--      {{ with $person.education }}
       <div class="col-md-7">
         <div class="section-subheading">{{ i18n "education" | markdownify }}</div>
         <ul class="ul-edu fa-ul mb-0">
@@ -104,7 +104,7 @@
           {{ end }}
         </ul>
       </div>
-      {{ end }}
+      {{ end }} -->
 
     </div>
   </div>
